[project]
name = "chat-streamlit"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "google-genai>=1.9.0",
    "google-generativeai>=0.8.4",
    "langchain>=0.3.22",
    "langchain-google-genai>=2.0.10",
    "openai>=1.70.0",
    "streamlit>=1.44.0",
]
